754c7b4 build: update bazel module lock file

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@angular-devkit/schematics",
-  "version": "21.0.0-next.0+sha-f54cdff-with-local-changes",
+  "version": "21.0.0-next.0+sha-754c7b4",
   "description": "Angular Schematics - Library",
   "main": "src/index.js",
   "typings": "src/index.d.ts",
@@ -18,7 +18,7 @@
     "tooling"
   ],
   "dependencies": {
-    "@angular-devkit/core": "github:angular/angular-devkit-core-builds#f54cdff",
+    "@angular-devkit/core": "github:angular/angular-devkit-core-builds#754c7b4",
     "jsonc-parser": "3.3.1",
     "magic-string": "0.30.17",
     "ora": "8.2.0",
