--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@angular-devkit/schematics",
-  "version": "21.0.0-next.2+sha-9749ec6",
+  "version": "20.3.0-next.0+sha-e21bd5c",
   "description": "Angular Schematics - Library",
   "main": "src/index.js",
   "typings": "src/index.d.ts",
@@ -18,9 +18,9 @@
     "tooling"
   ],
   "dependencies": {
-    "@angular-devkit/core": "github:angular/angular-devkit-core-builds#9749ec6",
+    "@angular-devkit/core": "github:angular/angular-devkit-core-builds#e21bd5c",
     "jsonc-parser": "3.3.1",
-    "magic-string": "0.30.19",
+    "magic-string": "0.30.17",
     "ora": "8.2.0",
     "rxjs": "7.8.2"
   },
@@ -39,5 +39,6 @@
   "bugs": {
     "url": "https://github.com/angular/angular-cli/issues"
   },
-  "homepage": "https://github.com/angular/angular-cli"
+  "homepage": "https://github.com/angular/angular-cli",
+  "__ngDevExceptionalMinor__": true
 }
