--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@angular-devkit/schematics",
-  "version": "20.3.0-next.0+sha-ef20a27",
+  "version": "20.3.0+sha-db1c025",
   "description": "Angular Schematics - Library",
   "main": "src/index.js",
   "typings": "src/index.d.ts",
@@ -18,7 +18,7 @@
     "tooling"
   ],
   "dependencies": {
-    "@angular-devkit/core": "github:angular/angular-devkit-core-builds#ef20a27",
+    "@angular-devkit/core": "github:angular/angular-devkit-core-builds#db1c025",
     "jsonc-parser": "3.3.1",
     "magic-string": "0.30.17",
     "ora": "8.2.0",
@@ -39,6 +39,5 @@
   "bugs": {
     "url": "https://github.com/angular/angular-cli/issues"
   },
-  "homepage": "https://github.com/angular/angular-cli",
-  "__ngDevExceptionalMinor__": true
+  "homepage": "https://github.com/angular/angular-cli"
 }
